hero section is done

--- a/css/syle.css
+++ b/css/syle.css
@@ -19,7 +19,7 @@
     @font-face {
         font-family: 'FuturaPT';
         font-style: normal;
-        font-weight: 300;
+        font-weight: 700;
         src: local(''), url('../fonts/FuturaPT-Bold.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
         url('../fonts/FuturaPT-Bold.woff') format('woff');
         /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
@@ -63,7 +63,7 @@
         height: 100%;
         margin: 0;
         padding: 0;
-        font-family: "FuturaPT", 'Arial', 'sans-serif';
+        font-family: 'FuturaPT', 'Arial', 'sans-serif';
         font-size: 16px;
         font-weight: 400;
         line-height: var(--main-line-height);
@@ -330,6 +330,8 @@
     }
     
     .menu__link {
+        position: relative;
+        z-index: 1;
         font-family: 'FuturaPT';
         font-style: normal;
         font-weight: 500;
@@ -340,8 +342,20 @@
         transition: all 0.3s ease;
     }
     
-    .menu__link:hover {
-        border-color: #F4FFAD;
+    .menu__link::after {
+        position: absolute;
+        z-index: -1;
+        left: 0;
+        bottom: 2px;
+        width: 100%;
+        height: 0;
+        background: linear-gradient( transparent 50%, #f4ffad 50%);
+        transition: 0.5s;
+        content: "";
+    }
+    
+    .menu__link:hover::after {
+        height: 12px;
     }
     
     .menu__link:active {
@@ -366,7 +380,7 @@
     }
     
     .down__link:hover {
-        border-color: #F4FFAD;
+        background: linear-gradient( transparent 50%, #f4ffad 50%);
     }
     
     .down__link:active {
@@ -385,3 +399,77 @@
         position: absolute;
     }
     /************ Header style end ***********/
+    /************ Main style start ***********/
+    
+    .hero {
+        padding: 153px 0 311px 0;
+        background-image: url(../images/hero-start-bg.png);
+        background-repeat: no-repeat;
+        background-size: contain;
+        background-position: calc(50% - 537px) calc(50% - 170px);
+        overflow: hidden;
+    }
+    
+    .hero__info {
+        width: 608px;
+        margin-left: auto;
+        position: relative;
+    }
+    
+    .hero__info::after {
+        content: "";
+        width: 319px;
+        height: 430px;
+        top: 170px;
+        right: -190px;
+        background-image: url(../images/hero-end-bg.png);
+        background-repeat: no-repeat;
+        background-size: contain;
+        position: absolute;
+    }
+    
+    .hero__title {
+        margin-bottom: 29px;
+        font-family: 'FuturaPT';
+        font-weight: 700;
+        font-size: 70px;
+        line-height: 64px;
+        color: var(--main-text-color);
+    }
+    
+    .title__color {
+        color: #78c0de;
+    }
+    
+    .hero__text {
+        width: 495px;
+        font-family: 'FuturaPT';
+        font-weight: 400;
+        font-size: 16px;
+        line-height: 21px;
+        color: #949494;
+        margin-bottom: 38px;
+    }
+    
+    .hero__link {
+        display: inline-block;
+        font-family: 'FuturaPT';
+        font-weight: 500;
+        font-size: 16px;
+        line-height: 21px;
+        color: var(--white-bg-color);
+        padding: 15px 48px;
+        background-color: #333333;
+        border-radius: 3px;
+        transition: all 0.3s ease;
+    }
+    
+    .hero__link:hover {
+        color: var(--main-text-color);
+        background-color: var(--ellow-bg-color);
+    }
+    
+    .hero__link:active {
+        opacity: 0.6;
+    }
+    /************ Main style end ***********/
