--- a/css/syle.css
+++ b/css/syle.css
@@ -471,5 +471,416 @@
     
     .hero__link:active {
         opacity: 0.6;
+        /******* Hero style end *****/
     }
+    /****** SITE BLOCKQUOTA  start**** */
+    
+    .blockquote {
+        padding-bottom: 190px;
+    }
+    
+    .blockquote__info {
+        width: 753px;
+        margin: 0 auto;
+        padding: 43px 0px 35px 0px;
+        margin-bottom: 35px;
+        position: relative;
+    }
+    
+    .blockquote__info::before {
+        content: "";
+        width: 50px;
+        height: 50px;
+        top: 17px;
+        left: -80px;
+        background-image: url(../images/leftquote.svg);
+        background-repeat: no-repeat;
+        background-size: contain;
+        position: absolute;
+    }
+    
+    .blockquote__info::after {
+        content: "";
+        width: 50px;
+        height: 50px;
+        top: 80px;
+        right: -80px;
+        background-image: url(../images/rightquote.svg);
+        background-repeat: no-repeat;
+        background-size: contain;
+        position: absolute;
+    }
+    
+    .blockquote__text {
+        font-family: 'FuturaPT';
+        font-style: normal;
+        font-weight: 300;
+        font-size: 20px;
+        line-height: 26px;
+        text-align: center;
+        color: #949494;
+        margin: 0;
+        position: relative;
+    }
+    
+    .blockquote__text::before {
+        content: "";
+        width: 140px;
+        height: 1px;
+        top: -40px;
+        left: 280px;
+        background-image: url(../images/icons/blog-line.svg);
+        background-repeat: no-repeat;
+        background-size: cover;
+        position: absolute;
+    }
+    
+    .blockquote__text::after {
+        content: "";
+        width: 140px;
+        height: 1px;
+        bottom: -40px;
+        left: 280px;
+        background-image: url(../images/icons/blog-line.svg);
+        background-repeat: no-repeat;
+        background-size: cover;
+        position: absolute;
+    }
+    
+    .blockquote__title {
+        text-align: center;
+        font-family: 'FuturaPT';
+        font-style: normal;
+        font-weight: 500;
+        font-size: 20px;
+        line-height: 26px;
+        color: #333333;
+    }
+    /****** SITE BLOCKQUOTA end**** */
+    /****** SITE SERVICES ******/
+    
+    .services {
+        padding-bottom: 235px;
+    }
+    
+    .services__title {
+        text-align: center;
+        font-family: 'FuturaPT';
+        font-style: normal;
+        font-weight: 700;
+        font-size: 48px;
+        line-height: 54px;
+        margin-bottom: 80px;
+        color: var(--main-text-color);
+    }
+    
+    .services__top {
+        width: 1225px;
+        margin: 0 auto;
+    }
+    
+    .our-services__list {
+        display: flex;
+        justify-content: space-between;
+        overflow-x: hidden;
+    }
+    
+    .our-services__item {
+        width: 193px;
+        min-width: 193px;
+        height: 201px;
+        padding: 30px 33px 28px 34px;
+        background-color: var(--white-bg-color);
+        display: flex;
+        justify-content: center;
+        align-items: flex-end;
+        text-align: center;
+        margin-right: 13px;
+        margin-bottom: 14px;
+        border: 1px solid #F3F3F3;
+        border-radius: 5px;
+        transition: all 0.3s ease;
+    }
+    
+    .our-services__item:hover {
+        opacity: 0.8;
+    }
+    
+    .our-services__item:active {
+        opacity: 0.6;
+    }
+    
+    .our-services__item--one {
+        position: relative;
+        margin-bottom: 0;
+        border: none;
+        padding-top: 178px;
+        padding-bottom: 39px;
+    }
+    
+    .our-services__item--one::before {
+        content: "";
+        display: inline-block;
+        top: 32px;
+        left: 75px;
+        width: 54px;
+        height: 78px;
+        background-image: url(../images/doctor.svg);
+        background-repeat: no-repeat;
+        background-size: contain;
+        position: absolute;
+    }
+    
+    .our-services__item--two {
+        position: relative;
+    }
+    
+    .our-services__item--two::before {
+        content: "";
+        display: inline-block;
+        top: 32px;
+        left: 48px;
+        width: 62px;
+        height: 77px;
+        background-image: url(../images/womandog.svg);
+        background-repeat: no-repeat;
+        background-size: contain;
+        position: absolute;
+    }
+    
+    .our-services__item--thri {
+        position: relative;
+    }
+    
+    .our-services__item--thri::before {
+        content: "";
+        display: inline-block;
+        top: 32px;
+        left: 60px;
+        width: 72px;
+        height: 77px;
+        background-image: url(../images/dog.svg);
+        background-repeat: no-repeat;
+        background-size: contain;
+        position: absolute;
+    }
+    
+    .our-services__item--four {
+        position: relative;
+        padding-bottom: 39px;
+    }
+    
+    .our-services__item--four::before {
+        content: "";
+        display: inline-block;
+        top: 40px;
+        left: 53px;
+        width: 75px;
+        height: 75px;
+        background-image: url(../images/dogskin.svg);
+        background-repeat: no-repeat;
+        background-size: contain;
+        position: absolute;
+    }
+    
+    .our-services__item--five {
+        position: relative;
+    }
+    
+    .our-services__item--five::before {
+        content: "";
+        display: inline-block;
+        top: 33px;
+        left: 60px;
+        width: 78px;
+        height: 78px;
+        background-image: url(../images/microscop.svg);
+        background-repeat: no-repeat;
+        background-size: contain;
+        position: absolute;
+    }
+    
+    .our-services__item--six {
+        position: relative;
+        padding-bottom: 39px;
+    }
+    
+    .our-services__item--six::before {
+        content: "";
+        display: inline-block;
+        top: 38px;
+        left: 60px;
+        width: 76px;
+        height: 76px;
+        background-image: url(../images/dogandpuppy.svg);
+        background-repeat: no-repeat;
+        background-size: contain;
+        position: absolute;
+    }
+    
+    .our-services__title {
+        font-family: 'FuturaPT';
+        font-style: normal;
+        font-weight: 500;
+        font-size: 18px;
+        line-height: 22px;
+        display: flex;
+        align-items: center;
+        text-align: center;
+        color: var(--main-text-color);
+    }
+    
+    .our-services__button {
+        border: none;
+        width: 38px;
+        height: 40px;
+        background-color: transparent;
+        padding: 0;
+        border-radius: 3px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        transition: all 0.3s ease;
+    }
+    
+    .our-services__button:hover {
+        background-color: var(--white-bg-color);
+    }
+    
+    .our-services__button:active {
+        opacity: 0.6;
+    }
+    
+    .our-services__img {
+        width: 15px;
+        height: 25px;
+    }
+    
+    .services__top {
+        position: relative;
+    }
+    
+    .our-services__button--left {
+        position: absolute;
+        top: 85px;
+        left: -42px;
+    }
+    
+    .our-services__button--right {
+        position: absolute;
+        top: 85px;
+        right: -42px;
+    }
+    
+    .services__down {
+        width: 100%;
+        max-width: 1225px;
+        margin: 0 auto;
+        display: flex;
+        align-items: center;
+        padding: 41px 35px;
+        background-color: var(--white-bg-color);
+    }
+    
+    .inspection__picture {
+        margin-right: 65px;
+    }
+    
+    .inspection__info {
+        width: 100%;
+        max-width: 492px;
+    }
+    
+    .reception__title {
+        font-family: 'FuturaPT';
+        font-style: normal;
+        font-weight: 500;
+        font-size: 36px;
+        line-height: 20px;
+        display: flex;
+        align-items: center;
+        color: var(--main-text-color);
+        margin-bottom: 18px;
+    }
+    
+    .reception__text {
+        font-family: 'FuturaPT';
+        font-style: normal;
+        font-weight: 400;
+        font-size: 16px;
+        line-height: 20px;
+        color: #949494;
+        margin-bottom: 9px;
+    }
+    
+    .reception__text--margin {
+        margin-bottom: 34px;
+    }
+    
+    .reception__link {
+        display: inline-block;
+        font-family: 'FuturaPT';
+        font-style: normal;
+        font-weight: 500;
+        font-size: 16px;
+        line-height: 21px;
+        padding: 15px 35px 15px 63px;
+        color: var(--white-bg-color);
+        border-radius: 3px;
+        transition: all 0.3s ease;
+    }
+    
+    .reception__link--one {
+        background-color: var(--ellow-bg-color);
+        margin-right: 21px;
+        position: relative;
+    }
+    
+    .reception__link--one::before {
+        content: "";
+        width: 21px;
+        height: 21px;
+        top: 15px;
+        left: 30px;
+        background-image: url(../images/money.svg);
+        background-repeat: no-repeat;
+        background-size: contain;
+        position: absolute;
+    }
+    
+    .reception__link--one:hover {
+        color: var(--white-bg-color);
+        background: rgba(255, 189, 84, 0.8);
+    }
+    
+    .reception__link--one:active {
+        opacity: 0.6;
+    }
+    
+    .reception__link--two {
+        background-color: var(--main-bg-color);
+        position: relative;
+    }
+    
+    .reception__link--two::before {
+        content: "";
+        width: 21px;
+        height: 21px;
+        top: 15px;
+        left: 30px;
+        background-image: url(../images/document.svg);
+        background-repeat: no-repeat;
+        background-size: contain;
+        position: absolute;
+    }
+    
+    .reception__link--two:hover {
+        color: var(--white-bg-color);
+        background: rgba(51, 51, 51, 0.8);
+    }
+    
+    .reception__link--two:active {
+        opacity: 0.6;
+    }
+    /**** Services style end   *****/
     /************ Main style end ***********/
