--- a/css/syle.css
+++ b/css/syle.css
@@ -956,13 +956,6 @@
     .events__input:focus {
         border: 2px solid transparent;
     }
-    /*     
-    .events__input:invalid (:focus) {
-        border-color: #DC4D41;
-        color: #DC4D41;
-        animation-name: error;
-        animation-duration: 1s;
-    } */
     
     .events__input:not(:focus):invalid:not(:placeholder-shown) {
         border: 2px solid #ff0000;
@@ -1007,4 +1000,518 @@
         transition: 0.5s ease;
     }
     /********* <!-- Hero events end --> *******/
+    /******** Hero article start *********/
+    
+    .article {
+        padding: 150px 0px 260px 0px;
+    }
+    
+    .article__title {
+        font-family: 'Futura PT';
+        font-style: normal;
+        font-weight: 700;
+        font-size: 48px;
+        line-height: 20px;
+        text-align: center;
+        color: var(--main-text-color);
+        margin-bottom: 80px;
+    }
+    
+    .article__list {
+        display: flex;
+    }
+    
+    .article__item {
+        width: 307px;
+        background-color: var(--white-bg-color);
+        border: 1px solid #E4E4E2;
+        border-radius: 5px;
+        transition: all 0.3s ease;
+        margin-right: 30px;
+        overflow: hidden;
+        margin-bottom: 60px;
+    }
+    
+    .article__item:nth-child(4) {
+        margin-right: 0;
+    }
+    
+    .article__item:nth-child(5),
+    .article__item:nth-child(6),
+    .article__item:nth-child(7),
+    .article__item:nth-child(8) {
+        margin-bottom: 0;
+    }
+    
+    .article__item:last-child {
+        margin-right: 0;
+    }
+    
+    .article__item:hover {
+        box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
+    }
+    
+    .article__info {
+        padding: 22px 22px 35px 30px;
+        /* display: flex;
+    flex-direction: column;
+    align-items: flex-start; */
+    }
+    
+    .hospital__wrap {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        margin-bottom: 2px;
+    }
+    
+    .hospital__inner {
+        width: 190px;
+    }
+    
+    .wrap__list {
+        display: none;
+        align-items: center;
+    }
+    
+    .wrap__item {
+        margin-right: 7px;
+    }
+    
+    .wrap__item:last-child {
+        margin-right: 0;
+    }
+    
+    .wrap__time {
+        display: block;
+        margin-left: auto;
+        font-family: 'FuturaPT';
+        font-style: normal;
+        font-weight: 500;
+        font-size: 14px;
+        line-height: 18px;
+        color: #949494;
+    }
+    
+    .hospital__title {
+        font-family: 'FuturaPT';
+        font-style: normal;
+        font-weight: 700;
+        font-size: 22px;
+        line-height: 25px;
+        color: #000000;
+        margin-bottom: 10px;
+    }
+    
+    .hospital__text {
+        font-family: 'FuturPT';
+        font-style: normal;
+        font-weight: 400;
+        font-size: 16px;
+        line-height: 20px;
+        color: #949494;
+        margin-bottom: 37px;
+        /* white-space: nowrap; */
+        /* overflow:hidden;
+    text-overflow: ellipsis; */
+    }
+    
+    .wrap__link {
+        font-weight: 300;
+        font-size: 14px;
+        line-height: 22px;
+        color: #3D9CEA;
+    }
+    
+    .hospital__box {
+        display: flex;
+        align-items: center;
+    }
+    
+    .box__link {
+        display: flex;
+        align-items: center;
+        font-family: 'FuturaPT';
+        font-style: normal;
+        font-weight: 500;
+        font-size: 16px;
+        line-height: 21px;
+        color: var(--main-text-color);
+        position: relative;
+        margin-top: auto;
+        transition: all 0.3s ease;
+    }
+    
+    .box__link::before {
+        content: "";
+        width: 23px;
+        height: 21px;
+        background-image: url(../images/paw.svg);
+        background-repeat: no-repeat;
+        background-size: contain;
+        display: inline-block;
+        margin-right: 5px;
+    }
+    
+    .box__link:hover {
+        color: var(--ellow-hover-color);
+    }
+    
+    .box__link:active {
+        opacity: 0.7;
+    }
+    
+    .article__img {
+        width: 305px;
+        height: 180px;
+    }
+    
+    .article__item--active {
+        width: 640px;
+        display: flex;
+    }
+    
+    .article__item--active>.article__info>.hospital__wrap {
+        margin-bottom: 32px;
+    }
+    
+    .article__item--active>.article__picture>.article__img {
+        width: 305px;
+        height: 100%;
+    }
+    
+    .article__item--active>.article__info>.hospital__wrap>.wrap__list {
+        display: flex;
+    }
+    
+    .article__item--active>.article__info {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+    }
+    
+    .article__item--active>.article__info {
+        padding-top: 43px;
+    }
+    
+    .article__item--active>.article__info>.hospital__wrap {
+        width: 100%;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+    
+    .article__item--active>.article__info>.hospital__inner {
+        margin-bottom: 15px;
+    }
+    
+    .article__item--active>.article__info>.hospital__text {
+        margin-bottom: auto;
+    }
+    /******** Hero article  ****end*****/
+    /*********** connection style start **********/
+    
+    .connection {
+        margin-bottom: 240px;
+        background-image: url(../images/map-bg.png);
+        background-repeat: no-repeat;
+        background-position: center;
+        background-size: cover;
+    }
+    
+    .connection__inner {
+        width: 1520px;
+        margin: 0 auto;
+        display: flex;
+    }
+    
+    .connection__left {
+        width: 462px;
+        height: 652px;
+        margin-right: 166px;
+    }
+    
+    .connection__map {
+        margin-top: 3px;
+        width: 462px;
+        height: 726px;
+    }
+    
+    .connection__right {
+        width: 375px;
+        margin-top: 50px;
+        padding: 62px 0px 74px 0px;
+        position: relative;
+    }
+    
+    .connection__right::after {
+        content: "";
+        width: 447px;
+        height: 447px;
+        top: 147px;
+        right: -509px;
+        background-image: url(../images/feedbackfish.png);
+        background-repeat: no-repeat;
+        background-size: contain;
+        position: absolute;
+    }
+    
+    .form__title {
+        font-family: "FuturaPT";
+        font-style: normal;
+        font-weight: bold;
+        font-size: 48px;
+        line-height: 62px;
+        margin-bottom: 14px;
+        color: var(--white-bg-color);
+    }
+    
+    .form__text {
+        font-family: "FuturaPT";
+        font-style: normal;
+        font-weight: normal;
+        font-size: 16px;
+        line-height: 20px;
+        color: #949494;
+        margin-bottom: 29px;
+    }
+    
+    .form__input {
+        width: 375px;
+        padding: 16px 30px 13px 22px;
+        margin-bottom: 14px;
+        outline: none;
+        font-family: 'FuturaPT';
+        font-style: normal;
+        font-weight: 400;
+        font-size: 16px;
+        line-height: 20px;
+        color: var(--main-text-color);
+    }
+    
+    .form__input::placeholder {
+        font-family: "FuturaPT";
+        font-style: normal;
+        font-weight: normal;
+        font-size: 16px;
+        line-height: 21px;
+        color: #949494;
+        border: 2px solid transparent;
+    }
+    
+    .form__input:focus {
+        border-color: #FFBD54;
+    }
+    
+    .form__input:not(:placeholder-shown):not(:focus):invalid {
+        border-color: #DC4D41;
+        color: #DC4D41;
+    }
+    
+    .form__texterea {
+        width: 375px;
+        padding: 17px 22px 20px 22px;
+        outline: none;
+        resize: none;
+        margin-bottom: 30px;
+        font-family: 'FuturaPT';
+        font-style: normal;
+        font-weight: 400;
+        font-size: 16px;
+        line-height: 20px;
+        color: var(--main-text-color);
+    }
+    
+    .form__texterea:focus {
+        border-color: #FFBD54;
+    }
+    
+    .form__texterea:not(:placeholder-shown):not(:focus):invalid {
+        border-color: #DC4D41;
+        color: #DC4D41;
+    }
+    
+    .form__texterea::placeholder {
+        font-family: "FuturaPT";
+        font-style: normal;
+        font-weight: normal;
+        font-size: 16px;
+        line-height: 21px;
+        color: #DBDBDB;
+    }
+    
+    .form__button {
+        font-family: "FuturaPT";
+        font-style: normal;
+        font-weight: 500;
+        font-size: 16px;
+        line-height: 21px;
+        color: var(--white-bg-color);
+        padding: 15px 50px;
+        background-color: #FFBD54;
+        border: none;
+        border-radius: 3px;
+    }
+    
+    .form__button:hover {
+        opacity: 0.8;
+        ;
+    }
+    
+    .form__button:active {
+        opacity: 0.6;
+    }
+    /*********** connection style end **********/
     /************ Main style end ***********/
+    /*********** Footer start *********/
+    
+    .site-footer {
+        padding: 54px 0px 23px 0px;
+        background-color: #F3F3F3;
+    }
+    
+    .site-footer__inner {
+        display: flex;
+        justify-content: space-between;
+        align-items: flex-start;
+        margin-bottom: 28px;
+    }
+    
+    .site-footer__img {
+        display: block;
+        transition: all 0.3s ease;
+    }
+    
+    .site-footer__img:hover {
+        opacity: 0.8;
+    }
+    
+    .site-footer__img:active {
+        opacity: 0.6;
+    }
+    
+    .over__item {
+        margin-bottom: 14px;
+    }
+    
+    .over__link {
+        font-family: 'FuturaPT';
+        font-style: normal;
+        font-weight: 500;
+        font-size: 16px;
+        line-height: 21px;
+        color: var(--main-text-color);
+        transition: all 0.3s ease;
+    }
+    
+    .over__link:hover {
+        color: var(--ellow-hover-color);
+    }
+    
+    .over__link:active {
+        color: #333333b3;
+    }
+    
+    .data__list {
+        position: relative;
+    }
+    
+    .data__list::before {
+        content: "";
+        width: 16px;
+        height: 16px;
+        top: 3px;
+        left: -25px;
+        background-image: url(../images/date.svg);
+        background-repeat: no-repeat;
+        background-size: contain;
+        position: absolute;
+    }
+    
+    .data__item {
+        margin-bottom: 3px;
+    }
+    
+    .location__address {
+        width: 157px;
+        position: relative;
+        font-family: 'FuturaPT';
+        font-style: normal;
+        font-weight: 500;
+        font-size: 16px;
+        line-height: 21px;
+        display: flex;
+        align-items: center;
+        color: var(--main-text-color);
+        position: relative;
+    }
+    
+    .location__address::before {
+        content: "";
+        width: 16px;
+        height: 16px;
+        top: 3px;
+        left: -25px;
+        background-image: url(../images/home.svg);
+        background-repeat: no-repeat;
+        background-size: contain;
+        position: absolute;
+    }
+    
+    .tel__list {
+        position: relative;
+    }
+    
+    .tel__list::before {
+        content: "";
+        width: 16px;
+        height: 16px;
+        top: 3px;
+        left: -25px;
+        background-image: url(../images/call.svg);
+        background-repeat: no-repeat;
+        background-size: contain;
+        position: absolute;
+    }
+    
+    .tel__item {
+        margin-bottom: 4px;
+    }
+    
+    .tel__item:last-child {
+        margin-bottom: 0px;
+    }
+    
+    .tel__link {
+        font-family: 'FuturaPT';
+        font-style: normal;
+        font-weight: 500;
+        font-size: 14px;
+        line-height: 18px;
+        text-align: right;
+        color: var(--main-text-color);
+        transition: all 0.3s ease;
+    }
+    
+    .tel__link:hover {
+        color: var(--ellow-hover-color);
+    }
+    
+    .tel__link:active {
+        color: #333333b3;
+    }
+    
+    .site-footer__and {
+        display: flex;
+        justify-content: flex-end;
+        font-family: 'FuturaPT';
+        font-style: normal;
+        font-weight: 400;
+        font-size: 14px;
+        line-height: 18px;
+        display: flex;
+        align-items: center;
+        text-align: right;
+        color: #5C5C5C;
+    }
+    /*********** Footer finish  ****** */
